# hl

./: .gitignore  .vercelignore  AGENTS.md  README.md  app.css  package-lock.json  package.json  vercel.json
.playwright-cli/: page-2026-04-19T20-33-09-397Z.yml  page-2026-04-19T20-33-42-730Z.yml  page-2026-04-19T20-33-46-926Z.yml  page-2026-04-19T20-33-50-191Z.yml  page-2026-04-19T20-34-50-606Z.yml
app/: AGENTS.md
app/core/: Cargo.toml
app/core/examples/: outbox_stats.rs  purple_sync_bench.rs
app/core/scripts/: generate-swift-bindings.sh
app/core/src/: articles.rs  artifacts.rs  blossom.rs  bookmarks.rs  cache.rs  chat.rs  client.rs  comments.rs  curation.rs  discovery.rs  discussions.rs  errors.rs  events.rs  feedback.rs  follows.rs  groups.rs  highlights.rs  isbn_lookup.rs  lib.rs  lists.rs  models.rs  nip46.rs  nostr_entities.rs  nostr_runtime.rs  outbox.rs  pictures.rs  profile.rs  reactions.rs  reads.rs  recent_books.rs  recommendations.rs  relay_polish.rs  relays.rs  search.rs  session.rs  subscriptions.rs  web_metadata.rs
app/core/tests/: nostr_connect.rs  session_nsec.rs
ci_scripts/: ci_pre_xcodebuild.sh
docs/: AGENTS.md  client-spec-v1.0.md  community-page-proposals-v1.4.md  community-page-proposals.md  highlight-group-prototypes-v2.html  highlight-group-prototypes-v3.html  highlight-group-prototypes-v4.html  highlight-group-prototypes-v5.html  highlight-group-prototypes-v6.html  highlight-group-prototypes-v7.html  highlight-group-prototypes.html  history-and-vision.md  landing-page-proposals.md  market-research-2026.md  mvp-build-plan.md  plan.md  (+6 more)
(+536 files in other folders)
